[package]
name = "watcher"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = { version = "0.11.5", default-features=false, features = ["client", "gateway", "rustls_backend", "model"] }
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0.163", features = ["derive"] }
moka = { version = "0.11.0", features = ["future"] }
once_cell = "1.17.1"
axum = { version = "0.6.18", features = ["json"] }
tower-http = { version = "0.4.0", features = ["cors"]}
async-stream = "0.3.5"
futures = "0.3.28"
async-channel = "1.8.0"
